--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,7 @@
 {
     "short_name": "BizCard CRM",
-    "name": "Business Card CRM",
+    "name": "BizCard CRM - Akıllı Kartvizit Yönetimi",
+    "description": "Kurumsal kartvizit yönetimi, akıllı tarama ve müşteri etkileşim takibi platformu.",
     "icons": [
         {
             "src": "favicon.ico",
@@ -10,16 +11,19 @@
         {
             "src": "logo192.png",
             "type": "image/png",
-            "sizes": "192x192"
+            "sizes": "192x192",
+            "purpose": "any maskable"
         },
         {
             "src": "logo512.png",
             "type": "image/png",
-            "sizes": "512x512"
+            "sizes": "512x512",
+            "purpose": "any maskable"
         }
     ],
-    "start_url": ".",
+    "start_url": "/",
     "display": "standalone",
-    "theme_color": "#764ba2",
-    "background_color": "#1a1a1a"
+    "orientation": "portrait",
+    "theme_color": "#3b82f6",
+    "background_color": "#020617"
 }
