--- a/backend/package.json
+++ b/backend/package.json
@@ -9,20 +9,21 @@
         "check-db": "node check_db.js"
     },
     "dependencies": {
+        "axios": "^1.13.4",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
+        "exceljs": "^4.4.0",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "multer": "^1.4.5-lts.1",
         "passport": "^0.6.0",
         "passport-local": "^1.0.0",
         "passport-saml": "^3.2.4",
+        "pdfkit-table": "^0.1.99",
         "pg": "^8.11.3",
         "pg-hstore": "^2.3.4",
-        "sequelize": "^6.32.1",
-        "exceljs": "^4.4.0",
-        "pdfkit-table": "^0.1.99"
+        "sequelize": "^6.32.1"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
