--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,13 @@
         "@mui/material": "^7.3.7",
         "axios": "^1.6.0",
         "dexie": "^3.2.4",
+        "qrcode.react": "^3.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.11.0",
         "react-image-crop": "^10.1.0",
         "react-router-dom": "^6.18.0",
-        "tesseract.js": "^5.0.3",
-        "qrcode.react": "^3.1.0"
+        "tesseract.js": "^5.0.3"
     },
     "devDependencies": {
         "@types/react": "^18.2.37",
