--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       - "5173:5173"
     environment:
       - VITE_API_URL=http://localhost:5000
+      - NODE_OPTIONS=--max-old-space-size=4096
     depends_on:
       - backend
     volumes:
