--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
         "pdfkit-table": "^0.1.99",
         "pg": "^8.11.3",
         "pg-hstore": "^2.3.4",
-        "sequelize": "^6.32.1"
+        "sequelize": "^6.32.1",
+        "vcf": "^2.1.2"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
