--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,48 +3,40 @@ version: '3.8'
 services:
   db:
     image: postgres:15-alpine
-    container_name: crm_db
+    restart: always
     environment:
       POSTGRES_USER: crm_user
-      POSTGRES_PASSWORD: crm_password
+      POSTGRES_PASSWORD: crm_password # Üretimde .env üzerinden override edilmeli
       POSTGRES_DB: crm_db
-    ports:
-      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
 
   backend:
     build: ./backend
-    container_name: crm_backend
-    ports:
-      - "5000:5000"
+    restart: always
+    env_file:
+      - .env
     environment:
       - DB_HOST=db
       - DB_USER=crm_user
-      - DB_PASSWORD=crm_password
       - DB_NAME=crm_db
       - PORT=5000
-      - SESSION_SECRET=dev-secret-key-only
     depends_on:
       - db
     volumes:
-      - ./backend:/app
-      - /app/node_modules
       - crm_uploads:/app/uploads
 
   frontend:
-    build: ./frontend
-    container_name: crm_frontend
-    ports:
-      - "5173:5173"
+    build:
+      context: ./frontend
+    restart: always
+    env_file:
+      - .env
     environment:
-      - VITE_API_URL=http://localhost:5000
+      - VITE_API_URL=https://kartvizit.ulakbim.gov.tr
       - NODE_OPTIONS=--max-old-space-size=4096
     depends_on:
       - backend
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
 
 volumes:
   pgdata:
