--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,7 +33,7 @@ services:
     env_file:
       - .env
     environment:
-      - VITE_API_URL=https://kartvizit.ulakbim.gov.tr
+      - VITE_API_URL=${VITE_API_URL}
       - NODE_OPTIONS=--max-old-space-size=4096
     depends_on:
       - backend
